--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="left"></div>
+    <div id="right"></div>
     <div id ="game">
     <div id="block"></div>
     <div id="character"></div>
